# MuseAudio

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  EMUAuthenticTables_VERIFIED.h  NORTH_STAR.md  OLED_UI_IMPLEMENTATION.md  PHASE_3_COMPLETE.md  README.md  SETUP-COMPLETE.md  THREAD_SAFETY_FIXES.md  archive-ui-files.sh  code.html  emu_z_plane_drop_in_dsp_submodule_readme_llm_ready.md  package-lock.json
.archive/: FloatingWord.h  MuseColors.h  OLEDLookAndFeel.h  OLEDMouth.h  OLEDScreen.h  ScryingMirror.h  SeanceLookAndFeel.h  ShapePairSelector.h  StatusBar.h  SynestheticWord.h  TransmissionArea.h
.github/ISSUE_TEMPLATE/: ui-release-check.md
_archive/: ModernMuseEditor.h  SeanceEditor.h
benchmarks/: ZPlaneBenchmarks.cpp
design/: README.md  UI-SPECIFICATION.md  design-tokens.json  muse-design-system.json
docs/: BACKEND_SHIP_CHECKLIST.md  ELITE_TIER_ROADMAP.md  HARDWARE_UI_IMPLEMENTATION.md  MUSE_DESIGN_CANON.json  PHASE4_SYNESTHETIC_INTELLIGENCE.md  PHILOSOPHY.md  PSYCHOACOUSTIC_INTEGRATION.md  ROADMAP.md  ROADMAP_ARCHIVE_2025-11-03.md  SCREENSHOT2_UI_IMPLEMENTATION.md  UI_BRIEF_TEMPLATE.md  UI_SHIP_CHECKLIST.md  VALIDATION_STATUS.md  VOWEL_SHAPES_VISUAL_REFERENCE.md  VOWEL_VISUALIZATION_IMPLEMENTATION.md  ZPLANE_COMPARISON.md  ZPLANE_INDEX.md  ZPLANE_INTEGRATION_STATUS.md  ZPLANE_OPTIMIZATION_GUIDE.md  ZPLANE_OPTIMIZATION_SUMMARY.md  ZPLANE_PACKAGE_SUMMARY.md  ZPLANE_QUICK_START.md  ZPLANE_REFERENCE.md  ZPLANE_ROADMAP.md  ZPLANE_SPEC_COMPLIANCE.md  ZPLANE_WORK_COMPLETE.md
docs/validation/: VALIDATION_REPORT.md  VALIDATION_SUMMARY.md  ZPLANE_VALIDATION_STRATEGY.md  audity_presets_manual_extraction.json  emu_real_params.json
dsp/: EMUAuthenticTables.h  ZPlaneBodeModel.cpp  ZPlaneBodeModel.hpp  ZPlaneEngineV2.cpp  ZPlaneEngineV2.hpp  ZPlaneFilter.h  ZPlaneFilter_fast.h  ZPlaneShapes.cpp  ZPlaneShapes.hpp
modules/zplane-dsp/: CMakeLists.txt  README.md
modules/zplane-dsp/include/zplane/: EMUAuthenticTables.h  ZPlaneFilter.h  ZPlaneFilter_fast.h
new/dsp_research_2025-10-17/: PluginEditor.cpp  (+3 more)
new/dsp_research_2025-10-17/DSP_PLUGIN_READY/: CMakeLists_TEMPLATE.txt  Cargo.toml  FINAL_SUMMARY.md  HOW_TO_IMPLEMENT.txt  IMPLEMENTATION_GUIDE.md  INDEX.md  QUICK_START.md  README.md  START_HERE.txt  VISUAL_GUIDE.md  build_library.bat
new/dsp_research_2025-10-17/DSP_PLUGIN_READY/examples/: basic_filter.rs  juce_plugin_template.cpp  plugin_integration.rs
new/dsp_research_2025-10-17/DSP_PLUGIN_READY/include/: dsp_plugin.h
new/dsp_research_2025-10-17/DSP_PLUGIN_READY/src/: ffi.rs  filter.rs  lib.rs  oscillator.rs  utils.rs
new/dsp_research_2025-10-17/SIMPLE_DSP_LIBRARY/: Cargo.toml  README.md
new/dsp_research_2025-10-17/SIMPLE_DSP_LIBRARY/examples/: basic_filter.rs  simple_synth.rs
new/dsp_research_2025-10-17/SIMPLE_DSP_LIBRARY/include/: simple_dsp.h
new/dsp_research_2025-10-17/SIMPLE_DSP_LIBRARY/src/: filter.rs  lib.rs  oscillator.rs  utils.rs
new/dsp_research_2025-10-17/dsp_core/dsp_core/: CMakeLists.txt  commit_crossfade.hpp  conductor.hpp  psycho_bus.hpp  psycho_core.hpp  stability.hpp
new/dsp_research_2025-10-17/dsp_core/zplane_core/: CMakeLists.txt
new/dsp_research_2025-10-17/dsp_core/zplane_core/include/zplane/: AuthenticEMUEngine.h  BiquadCascade.h  EMUAuthenticTables.h  OversampledEngine.h  PsychoacousticDescriptors.h  ResourcePool.h  SimdKernels.h  StateTransform.h  StaticShapeBank.h  ZPlane_STFTHarness.h  ZPoleMath.h
new/dsp_research_2025-10-17/dsp_core/zplane_core/src/: PsychoacousticDescriptors.cpp  ResourcePool.cpp  SimdKernels.cpp  StateTransform.cpp
new/dsp_research_2025-10-17/engine_field/: CMakeLists.txt
new/dsp_research_2025-10-17/engine_field/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
new/dsp_research_2025-10-17/engine_field/src/zplane/: AuthenticEMUEngine.h  BiquadCascade.h  IShapeBank.h  IZPlaneEngine.h  NonlinearStage.h  OversampledEngine.h  StaticShapeBank.h  ZPlaneParams.h  ZPoleMath.h
params/: ParametersV2.hpp
sessions/: FRONTEND_DSP_REVIEW.md  GENERATIVE_MOUTH_GUIDE.md  PARAMETER_FIX_2025-11-07.md  SESSION-CONTEXT-2025-11-11.md  SESSION-SUMMARY-2025-11-08.md  WORKLOG.md  sessions-config.json
shapes/: audity_shapes_A_44k.json  audity_shapes_A_48k.json  audity_shapes_B_44k.json  audity_shapes_B_48k.json  convert_sr.py
soon/: FieldEditor_v3.cpp  FieldEditor_v3.h  GenerativeMouth.h  HalftoneMouth.h
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  SeanceEditor.h
tests/: PluginBasics.cpp  ZPlaneDSPTests.cpp
tools/: audity_sysex_parser.py  post_build_copy.ps1
(+96 files in other folders)
